--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "develop": "gatsby develop",
     "start": "npm run develop"
   },
-  "devDependencies": {
-    "prettier": "^1.18.2"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/christopherbiscardi/gatsby-starter-mdx-basic"
