--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
+    "clean": "node rimraf-standalone.js .cache/* public/*",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
